Fix startup bug by undoing script defer, as init event was not firing. Fix toolbar padding on iOS standalone. Update LeafletJS to 1.1.0. Add text to Settings back button to increase touch area.

--- a/src/css/my.css
+++ b/src/css/my.css
@@ -102,7 +102,7 @@ body {
         height: 64px;
     }
 
-    .ios-translucent-statusbar .navigation-bar + .page__background + .page__content {
+    .ios-translucent-statusbar ons-toolbar + .page__background + .page__content {
         top: 64px;
     }
 
